@@ -18,4 +18,9 @@
   <include package=".upgrades" />
   <include file="profile.zcml" />
 
+  <adapter for=".tools.MemberData
+                Products.CMFPlone.interfaces.IPloneCatalogTool"
+           factory="plone.indexer.wrapper.IndexableObjectWrapper"
+           provides="plone.indexer.interfaces.IIndexableObject"/>
+
 </configure>
