@@ -10,12 +10,15 @@ Changelog
 - Translations basis with basic norwegian translations.
   [denys]
 
+- Made members searchable through the catalog. 
+  [ggozad, stefan]
+
 - Adjust profile version back to `1`. We will recreate the first site from
   scratch once more.
   [hannosch]
 
-- Extend member data to include phones, department, and two image sizes for
-  the portraits.
+- Extend member data to include phones, position, department, and two image
+  sizes for the portraits.
   [ggozad, stefan]
 
 - Added basic upgrade step infrastructure.
